--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#6366f1">
-    <title>PeerConnect Video Call</title>
+    <title>Video Call</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -18,7 +18,7 @@
         <div id="connection-screen" class="screen active">
             <div class="logo">
                 <i class="fas fa-video"></i>
-                <h1>PeerConnect</h1>
+                <h1>Video Call</h1>
             </div>
             
             <div class="call-id-container">
@@ -108,8 +108,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/peerjs@1.4.7/dist/peerjs.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/qrcode-generator@1.4.4/qrcode.min.js"></script>
-    <script>
+    <script src="script.js"></script>
         // JavaScript will be placed here for GitHub Pages single-file deployment
-    </script>
 </body>
 </html>
