--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/peerjs@1.4.7/dist/peerjs.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/qrcode-generator@1.4.4/qrcode.min.js"></script>
-    <script src="script.js"></script>
+    <script src="app.js"></script>
         // JavaScript will be placed here for GitHub Pages single-file deployment
 </body>
 </html>
