--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>PeerConnect Video Call</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="ui.css">
 </head>
 <body>
     <div id="app-container">
@@ -106,5 +106,8 @@
     <script src="https://cdn.jsdelivr.net/npm/peerjs@1.4.7/dist/peerjs.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/qrcode-generator@1.4.4/qrcode.min.js"></script>
     <script src="app.js"></script>
+    <!-- Add these right before </body> -->
+<div class="floating-circle circle-1"></div>
+<div class="floating-circle circle-2"></div>
 </body>
 </html>
